[gd_scene load_steps=19 format=3 uid="uid://dw5oqvrejpg8p"]

[ext_resource type="Script" path="res://MainScene/TopUpPage.gd" id="1_a7u3s"]
[ext_resource type="PackedScene" uid="uid://dkk4ce7nk7mdd" path="res://Global/BG.tscn" id="2_2akp7"]
[ext_resource type="FontFile" uid="uid://c8kfctqkt4qdk" path="res://png/font/大部分的字體/04B_30__.TTF" id="3_8qgwo"]
[ext_resource type="Texture2D" uid="uid://dsl3ecoy1s3pn" path="res://png/MainScene/錢跟鑽.png" id="4_dmoar"]
[ext_resource type="Texture2D" uid="uid://d0wguytvscpoh" path="res://png/TopUp/課金-06.png" id="5_t0pon"]
[ext_resource type="Texture2D" uid="uid://ccvf0ujk2pw0x" path="res://png/TopUp/課金-07.png" id="6_g7t4h"]
[ext_resource type="Texture2D" uid="uid://tuw2355ioeki" path="res://png/TopUp/課金-08.png" id="7_6lbtw"]
[ext_resource type="Texture2D" uid="uid://4xnu8khbm0sy" path="res://png/TopUp/課金-09.png" id="8_xu0ph"]
[ext_resource type="Texture2D" uid="uid://dheg6seu76yfg" path="res://png/TopUp/課金-03.png" id="9_dnmit"]
[ext_resource type="Texture2D" uid="uid://dnsav2mynvbqo" path="res://png/TopUp/課金-04.png" id="10_fc6hm"]
[ext_resource type="Texture2D" uid="uid://c1s4lx8v7l0w5" path="res://png/TopUp/課金-05.png" id="11_t3wpw"]
[ext_resource type="Texture2D" uid="uid://csighurmtx8ox" path="res://png/TopUp/通知.png" id="12_mwd4s"]
[ext_resource type="Texture2D" uid="uid://uhtt4bqp1vy7" path="res://png/TopUp/取消鈕.png" id="13_vev1b"]
[ext_resource type="Texture2D" uid="uid://dyr7csnntrsdl" path="res://png/TopUp/確認鈕.png" id="14_xf5ss"]
[ext_resource type="PackedScene" uid="uid://cuc8q0gmdxa5w" path="res://Global/Loading.tscn" id="15_03act"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0yotp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jpi1v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lpjdj"]

[node name="TopUpPage" type="Node2D"]
position = Vector2(-5.96046e-08, 2.38419e-07)
scale = Vector2(0.21, 0.21)
script = ExtResource("1_a7u3s")

[node name="BG" parent="." instance=ExtResource("2_2akp7")]

[node name="Label" type="Label" parent="."]
offset_left = 35.0
offset_top = 73.0952
offset_right = 285.0
offset_bottom = 133.095
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_8qgwo")
theme_override_font_sizes/font_size = 50
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="MarginContainer" parent="."]
offset_left = 60.0
offset_top = 531.667
offset_right = 176.0
offset_bottom = 566.667

[node name="BackLabel" type="Label" parent="Back"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_8qgwo")
theme_override_font_sizes/font_size = 30
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="TouchScreenButton" parent="Back" groups=["buttons"]]
position = Vector2(58, 15)
scale = Vector2(6.5, 2)
shape = SubResource("RectangleShape2D_0yotp")

[node name="CoinAmount" type="Label" parent="."]
offset_left = 685.0
offset_top = 82.619
offset_right = 845.0
offset_bottom = 122.619
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_8qgwo")
theme_override_font_sizes/font_size = 30
text = "1000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GemAmount" type="Label" parent="."]
offset_left = 940.0
offset_top = 82.619
offset_right = 1040.0
offset_bottom = 122.619
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_8qgwo")
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CoinAndGem" type="TouchScreenButton" parent="." groups=["buttons"]]
position = Vector2(636, 71.6191)
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("4_dmoar")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 95.2381
offset_top = 187.381
offset_right = 1047.24
offset_bottom = 447.381
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_direction = 2
layout_mode = 2
theme_override_constants/separation = 50

[node name="Gems90" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Gems90"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("5_t0pon")
centered = false

[node name="gem90" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Gems90" groups=["buttons"]]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Gems90"]
layout_mode = 2
text = "                                                  "

[node name="Gems60" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Gems60"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("6_g7t4h")
centered = false

[node name="gem60" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Gems60" groups=["buttons"]]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Gems60"]
layout_mode = 2
text = "                                                  "

[node name="Gems30" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Gems30"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("7_6lbtw")
centered = false

[node name="gem30" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Gems30" groups=["buttons"]]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Gems30"]
layout_mode = 2
text = "                                                  "

[node name="Gems6" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Gems6"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("8_xu0ph")
centered = false

[node name="gem6" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Gems6" groups=["buttons"]]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Gems6"]
layout_mode = 2
text = "                                                  "

[node name="Coins700" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Coins700"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("9_dnmit")
centered = false

[node name="coin700" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Coins700" groups=["buttons"]]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Coins700"]
layout_mode = 2
text = "                                                  "

[node name="Coins350" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Coins350"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("10_fc6hm")
centered = false

[node name="coin350" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Coins350" groups=["buttons"]]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Coins350"]
layout_mode = 2
text = "                                                  "

[node name="Coins100" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Coins100"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("11_t3wpw")
centered = false

[node name="coin100" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Coins100" groups=["buttons"]]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Coins100"]
layout_mode = 2
text = "                                                  "

[node name="ConfirmBG" type="Sprite2D" parent="."]
position = Vector2(576, 319.381)
scale = Vector2(1.58, 1.58)
texture = ExtResource("12_mwd4s")

[node name="QuestionLabel" type="Label" parent="ConfirmBG"]
offset_left = -200.855
offset_top = -50.3588
offset_right = 199.145
offset_bottom = 9.64122
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_8qgwo")
theme_override_font_sizes/font_size = 23
text = "confirm to purchase
90 diamonds?"
horizontal_alignment = 1

[node name="Cancel" type="Sprite2D" parent="ConfirmBG"]
position = Vector2(-100.764, 65.649)
texture = ExtResource("13_vev1b")

[node name="CancelButton" type="TouchScreenButton" parent="ConfirmBG/Cancel" groups=["buttons"]]
position = Vector2(0, 0.763947)
scale = Vector2(5, 2)
shape = SubResource("RectangleShape2D_lpjdj")

[node name="Confirm" type="Sprite2D" parent="ConfirmBG"]
position = Vector2(100, 65)
texture = ExtResource("14_xf5ss")

[node name="ConfirmButton" type="TouchScreenButton" parent="ConfirmBG/Confirm" groups=["buttons"]]
position = Vector2(0, 0.763947)
scale = Vector2(5, 2)
shape = SubResource("RectangleShape2D_lpjdj")

[node name="Notice" type="MarginContainer" parent="."]
offset_left = 451.0
offset_top = 264.143
offset_right = 701.0
offset_bottom = 384.643

[node name="Black_BG" type="ColorRect" parent="Notice"]
layout_mode = 2
color = Color(0.203922, 0.203922, 0.203922, 1)

[node name="Label" type="Label" parent="Notice"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Loading" parent="." instance=ExtResource("15_03act")]
position = Vector2(0, -2.86102e-05)

[connection signal="pressed" from="Back/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Gems90/gem90" to="." method="_on_gem_90_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Gems60/gem60" to="." method="_on_gem_60_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Gems30/gem30" to="." method="_on_gem_30_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Gems6/gem6" to="." method="_on_gem_6_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Coins700/coin700" to="." method="_on_coin_700_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Coins350/coin350" to="." method="_on_coin_350_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Coins100/coin100" to="." method="_on_coin_100_pressed"]
[connection signal="pressed" from="ConfirmBG/Cancel/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="ConfirmBG/Confirm/ConfirmButton" to="." method="_on_confirm_button_pressed"]
